--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,11 @@
 h1 {
-    color: green;
+    font-size: 20px;
+    color: black;
+    background-color: aquamarine;
+}
+
+.naglowek {
+    font-size: 20px;
+    background-color: aquamarine;
+    color:black;
 }
