--- a/views/tabela.hbs
+++ b/views/tabela.hbs
@@ -1,13 +1,15 @@
+{{>header}}
+ 
 <table border="3" style="width:90%;table-layout:fixed;">
     <tr>
         <th scope="col">
-            <font size="+2">IMIĘ I NAZWISKO</font>
+            <h1>IMIĘ I NAZWISKO<h1>
         </th>
         <th style="width:40%;" scope="col">
-            <font size="+2">PEŁNE DANE ADRESOWE</font>
+            <p class="naglowek">PEŁNE DANE ADRESOWE</p>
         </th>
         <th scope="col">
-            <font size="+2">AKTYWNY LINK DO STRONY WWW UŻYTKOWNIKA</font>
+            <p class="naglowek">AKTYWNY LINK DO STRONY WWW UŻYTKOWNIKA</p>
         </th>
     </tr>
 </table>
